--- a/chinese_chess.html
+++ b/chinese_chess.html
@@ -13,13 +13,8 @@
             font-family: '標楷體', 'Microsoft JhengHei', sans-serif;
             box-sizing: border-box;
         }
-
-        html,
         body {
-            height: 100%;
-        }
-
-        body {
+            width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
